[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["developer <developer@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.15.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
