[tool.poetry]
name = "ton-exporter"
version = "0.1.0"
description = ""
authors = ["developer <developer@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.15.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
pyyaml = "^6.0.1"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
